[package]
name = "twitchpipe"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "Low-latency Twitch live streams piped to mpv"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
bytes = "1.12.0"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "gzip", "stream", "http2", "rustls-no-provider"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "logging", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
